# SHDocument

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ahih.yml  build.xml  run.sh
client/: Client.cpp  Client.hpp
exception/: Exception.hpp
handler/: Handler.cpp  Handler.hpp
misc/: client.cpp  mainTest.cpp  server.cpp
misc/filetotest/: filetotest.txt
server/: Server.cpp  Server.hpp
src/client/: Client.cpp  Client.hpp
src/common/: Common.hpp  common.hpp
src/common/exception/: Exception.cpp  Exception.hpp
src/common/handler/: Handler.cpp  Handler.hpp
src/common/message/: Massage.cpp  Massage.hpp
src/server/: Server.cpp  Server.hpp
test/3rd party/: ObjectToTestJson.hpp  OjectToTestJson.hpp  jsonTest.cpp
test/src/: handlerTest.cpp  text.txt
